# segyParser-API

./: CMakeLists.txt  README.md  main.cpp
include/: BinaryHeader.h  Segy.h  TraceHeader.h  Traces.h
include/utils/: endianConversion.h
segyfiles/: shotgather.sgy
src/: Segy.cpp  Traces.cpp  ifsTest.cpp  printUtil.cpp
